--- a/neuronnet/nnml.tex
+++ b/neuronnet/nnml.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{mathtools}
 \usepackage{amsfonts}
+\usepackage{color}
 \mode<presentation>{ \usetheme{boxes} } 
 \title{Szóreprezentációk folytonos vektortérben}
 \AtBeginSection[]{
@@ -148,5 +149,45 @@ Szóvektorok átlagát veszi a környezetből, nincs rejtett réteg.
 \includegraphics[width=\linewidth]{mikolov-example-relationships}
 \end{frame}
 
+\section{Pennington et al 2014: GloVe: Global Vectors for Word Representation}
+
+\begin{frame}
+
+\begin{itemize}
+\item a szóanalógiás feladat: King - Queen = Man - Woman
+
+\item vektorok esetén szépen elegánsan vektoriális kivonás
+
+\item erre a feladatra fókuszálva dolgozzák ki a glove modellt
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\begin{description}
+\item[megfigyelés 1:]
+\(i, j, k\) szavak, \(P()\) valószínűségek: \(\frac{P(k|i)}{P(k|j)} >> 1\), ha \(k\) jelentése kapcsolatos az \(i, j\) szavakkal, de az \(i\) szóra jellemző, \(j\)-re nem; és közel van 1-hez, ha inadekvát. Tehát a \(w_i-w_j\) szóvektorok különbsége a valószínűségük hányadosaival lehet arányos a modellben.
+
+\item[megfigyelés 2:]
+\(w_i-w_j\) különbség és a \(w_k\) próbaszó (probe word) vektorokra szimmetrikus is lehetne a modell (mert a szó-kontextusszó viszony szimmetrikus)
+
+\item[megfigyelés 3:]
+a valószínűségek skalárok, a szóvektorok vektorok, de a két vektor skaláris szorzatát kipróbálhatnánk
+\end{description}
+\end{frame}
+
+\begin{frame}
+levezethető, hogy ilyen tulajdonságokkal rendelkezik ez az egyszerű modell:
+\[ w_i \times w_k + b = \log(X_{ik}) \]
+
+a modell betanításához (a \(w_i\) vektorok kiszámításához) a legkisebb négyzetek megfelelő
+(a glove-ban még egy súlyfüggvénnyel szorzunk, ami kiegyenlíti a szógyakoriságbeli nagyságrendi különbségeket)
+
+a modell szerencsére a \(|V|^2\)-nél sokkal jobban méretezhető, mert az együttes előfordulások eloszlása nem egyenletes, hanem hatványtörvény szerinti (~ ritka mátrix; polinomiálisan kevesebb számítás szükséges)
+\end{frame}
+
+\begin{frame}
+\frametitle{Eredmények} 
+\textcolor{red}{világverő :)}
+\end{frame}
 \end{document}
 
